[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Entities/Enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
height = 3.0

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 3, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[node name="Enemy" type="KinematicBody" groups=[
"enemy",
]]
collision_layer = 18
collision_mask = 33
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="DirectionSwitch" type="Timer" parent="."]
wait_time = 2.0

[node name="SpawnMove" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="DirectionSwitch" to="." method="_on_DirectionSwitch_timeout"]
[connection signal="timeout" from="SpawnMove" to="." method="_on_SpawnMove_timeout"]
